# xyplotter

./: README.md  pyproject.toml
examples/: plot_patterns.py  plot_simple_control.py  simple-control.py
src/xyplotter/: __init__.py  xyplotter.py
